# mana

./: CMakeLists.txt  Jenkinsfile  conanfile.py
integration/simple/: CMakeLists.txt  conanfile.txt  service.cpp
test/integration/simple/: conanfile.txt
test/unit/: CMakeLists.txt  conanfile.txt
unit/: CMakeLists.txt  conanfile.txt  dummy.cpp
